<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/stars"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dip"
    tools:context=".Asteroids" >

    <TextView
        android:id="@+id/title"
        style="@style/AsteroidsText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dip"
        android:layout_marginTop="-100dip"
        android:text="@string/app_title" />

    <Button
        android:id="@+id/play"
        style="@style/AsteroidsText.Buttons"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/play" />

    <Button
        android:id="@+id/properties"
        style="@style/AsteroidsText.Buttons"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:onClick="launchPreferences"
        android:text="@string/settings" />

    <Button
        android:id="@+id/score"
        style="@style/AsteroidsText.Buttons"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="launchScore"
        android:text="@string/scores" />

    <Button
        android:id="@+id/about"
        style="@style/AsteroidsText.Buttons"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:onClick="launchAbout"
        android:text="@string/about" />

    <Button
        android:id="@+id/exit"
        style="@style/AsteroidsText.Buttons"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:onClick="finish"
        android:text="@string/exit" />

</LinearLayout>